<resources>
    <string name="app_name">Recipee</string>
    <string name="email_account">Email</string>
    <string name="full_name">Nama Panjang</string>
    <string name="No_telp">No.Telp</string>
    <string name="pass_word">Password</string>
    <string name="updatee">Update</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="servings">Servings</string>
    <string name="minutes">Minutes</string>
    <string name="summary">Summary</string>
    <string name="instruction">Instruction</string>
    <string name="home">Home</string>
    <string name="healthscore">HealthScore</string>
    <string name="hi_user">Hi User</string>
    <string name="what_do_you_want_to_cook">What Do You Want To Cook?</string>
    <string name="recommend">Recommend</string>
    <string name="daily_meal_recomendation">Daily Meal Recomendation</string>
    <string name="cocoa_protein_pancakes">Cocoa Protein Pancakes</string>
</resources>